yt-gif-extension/version-0.2/css/drop-down-menu.css
:root{
  --ddm-tooltip-arrow-size: 2ch;
  --ddm-scale-tooltip: 0;
  --ddm-tooltip-traslate-y: 0;

  --base-x-offset-content: 50%;
  /*https://youtu.be/ujlpzTyJp-M*/
}

.dropdown :is([data-tooltip])::before,
.dropdown :is([data-tooltip])::after {
  color: var(--ddm-tooltip-c);

  font-size: .8em;
  text-align: center;
  
  
  height: auto;
  width: fit-content;
  max-width: 90%;
  
  
  position: absolute;  
  left: 50%;
  transform: translateX(-50%) translateY(var(--ddm-tooltip-traslate-y)) scale(var(--ddm-scale-tooltip));

  transition: 100ms transform;
  transform-origin: bottom center;
}

.dropdown :is([data-tooltip])::before {
  content: attr(data-tooltip);
  background-color: var(--ddm-tooltip-bg);
  border-radius: .7em;
  padding: 0ch 1ch;

  --ddm-tooltip-traslate-y: calc(-100% - var(--ddm-tooltip-arrow-size));
  
}

.dropdown :is([data-tooltip]):hover::before,
.dropdown :is([data-tooltip]):hover::after {
  --ddm-scale-tooltip: 1;
}
/* broken - down arrow - for two or more lines F 
:is(label.dropdown-item-description)::after {
  content: '';
  --ddm-tooltip-traslate-y: calc(-1 * var(--ddm-tooltip-arrow-size));
  
  border: var(--ddm-tooltip-arrow-size) solid transparent;
  border-top-color: var(--ddm-tooltip-bg);
  
  transform-origin: top center;
}*/





/*well the big boi ddm, the big one*/
span.yt-gif-drop-down-menu-toolbar .bp3-popover-target > .dropdown {
  z-index: 1000;
}

/*YT GIF ICON - on the topbar*/
.dropdown:hover .dropbtn {
  background-color: var(--drop-menu-btn-h);
}
.ty-gif-icon:focus{
  background-color: var(--drop-menu-btn-f) !important;
}
.ty-gif-icon {
  padding: 0px 0px !important;
}
.ty-gif-icon:before {
  display: none;
}
svg.yt-gif-svg {
  max-width: 24px;
  max-height: 24px;
  aspect-ratio: 1 / 1;
}
path.yt-gif-svg-bg {
  fill: var(--yt-gif-icon-bg);
}

/* DROP DOWN & REVEALING IT's content*/
.dropdown-focus{
  display: flex !important;
}
/*.dropdown-blur{
  
}*/
.dropdown {
  display: inline-block;
  position: relative;
  --base-x-offset-content: -50%;
}
.dropdown:hover > .dropdown-content {
  display: flex;
}
.yt-gif-style > .dropdown-content{
  left: 50%; /* dead centered*/
  --base-x-offset-content: -100%; /* dead centered*/ 
}
.dropdown-content {
  display: none;
  width: max-content;

  position: absolute;
  flex-direction: column;
  align-items: flex-end;

  z-index: 11 !important;
  transform: translateX(var(--base-x-offset-content));

  background-color: var(--dropdown--bg);

  border-radius: 10px;

  box-shadow: 0 0 0 1px var(--dropdown-shadow),
    0 2px 4px var(--dropdown-shadow),
    0 8px 24px var(--dropdown-shadow);
  z-index: 1;
}
/* WHOLE HIERARCHY*/
.dropdown-content {
  --m: 10px 10px;
}
.dropdown label {
  display: block;
}
span.dropdown-item,
.yt-gif-style,
.dropdown-info-message{
  border-radius: 5px;
}
.dropdown-info-message {
  background-color: var(--submenu-message-bg);
  padding: 5px;
  color: var(--dropdown-c);
}

span.dropdown-info-message.dropdown-item-description{
  background-color: transparent;
}

:is(span.dropdown-item, .yt-gif-style, span[data-tooltip]):hover {
  background-color: var(--dropdown-main-btn-bg-h);
}
span.dropdown-item *,
.yt-gif-style > span.dropdown-info-message {
  margin: var(--m);
}

/* DROP DOWN ITEMS - mainly description next to a checkbox*/
span.dropdown-item {
  width: max-content;
  display: flex;
  align-items: center;
}

/*LEFT SIDE of item ≡ description*/
.dropdown-item-description {
  color: var(--dropdown-c);
  text-decoration: none;
  font-weight: normal;
  text-align: center;
}
/*RIGHT SIDE of item ≡ description*/
.dropdown-content input {
  vertical-align: bottom;
  margin-left: 0;
}

/*RANGE & scrollwheel features*/
span.rangeOffset {
  width: 100%;
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: normal;
}
span.rangeOffset * {
  --m: 2px 10px;
}
span.rangeOffset label {
  min-width: 12.8px;
  vertical-align: bottom;
  margin-left: 0;
}
span.rangeOffset input {
  width: 100%;
}
.dropdown input[type=range]{
  cursor: col-resize;
}

/*SUB DROPDOWN MENU */
.dropdown-item-contain-two,
.dropdown-info-message {
  display: flex;
}
span.dropdown-info-message {
  align-self: center;
  cursor: pointer;
}
.dropdown-item-separator {
  width: 100%;
  height: .5ch;
  background-color: var(--submenu-message-bg);
  border-radius: 100%;
}
/*YT GIF SYTLE SUB DROP DOWN */
.yt-gif-style {
  align-self: center;
  margin: var(--m);
}
.yt-gif-style > .dropdown-content {
  --dropdown-main-btn-bg-h: var(--submenu-styles-item-bg-h);
  --drop-menu-btn-h: var(--submenu-styles-item-bg-h-h);
  --dropdown--bg: var(--submenu-styles-content-bg);
}



/*SHOW TEXT INFO DROP DOWN*/
.dropdown-show-info {
  padding: 15px;
  --base-x-offset-content: -40%;
  --message-opacity: 0.3;
}

.dropdown-info-box .dropdown-item {
  max-width: 40ch;
}
.dropdown-show-info .dropdown-item-description{
  text-align: center;
}
.dropdown-show-info > .dropdown-info-message {
  --submenu-message-bg: var(--submenu-info-btn-bg);
  opacity: var(--message-opacity);
  cursor: help;
}
div.dropdown-show-info:hover {
  --dropdown-main-btn-bg-h: var(--submenu-info-item-bg-h);
} 
div.dropdown-show-info:hover > span.dropdown-info-message{
  --submenu-message-bg: var(--submenu-info-btn-bg-h);
  --message-opacity: 1.0:
}
.dropdown-info-box > .dropdown-info-message--aditional {
  display: flex;
  max-width: 40ch;
  flex-direction: column;
  text-align: center;
}

span.dropdown-info {
  color: var(--dropdown-c);
}


/* deployment funcionality feedback */
.dropdown_forbidden-input{
  --deployment-extreme-bg:var(--deployment-forbidden-extreme-bg);
  --deployment-mid-bg:var(--deployment-forbidden-mid-bg);
}

.dropdown_allright-input{
  --deployment-extreme-bg:var(--deployment-forbidden-extreme-bg);
  --deployment-mid-bg:var(--deployment-allright-mid-bg);
}

.dropdown_fadeIt-bg_animation {    
    background-image:none !important;
    animation: fadeIt 10s ease-in-out; 
}

@keyframes fadeIt {
  0%   { background-color: var(--deployment-extreme-bg); }
  50%  { background-color: var(--deployment-mid-bg); }
  100% { background-color: var(--deployment-extreme-bg); }
}

/* SHOULD BE ADDED AND REMOVED THROUGH JAVASCRIPT */
.dropdown--hidden {
  display: none !important;
}
.dropdown_not-allowed_input *{
  cursor: not-allowed;
}
/* navegate to settings page not allowed */
div.settings-not-allowed > span.dropdown-info-message{
  cursor: not-allowed;
}
:is(div.settings-not-allowed, div.settings-not-allowed:hover) 
> span.dropdown-info-message {
  --submenu-message-bg: rgb(129 97 0 / 90%); 
}
div.settings-not-allowed > span.dropdown-info-message:hover{
  --dropdown-main-btn-bg-h: rgba(255, 193, 7, 0.62);
}

/* Treat it like a perma highlight */
.dropdown_deployment-style > .dropdown-info-message {
  --submenu-message-bg: var(--submenu-message-bg-high);
}

/* pusling animation for visible deployiment style*/
.drodown_item-pulse-animation {
  cursor: pointer;
  animation: pulse_dropdown_item 3s infinite;
}
.drodown_item-pulse-animation:hover {
  animation: none;
}

@keyframes pulse_dropdown_item {
  0% {
    box-shadow: 0 0 0 0 var(--dropdown-pulse-anim-box-shadow-start);
  }
  70% {
    box-shadow: 0 0 0 10px var(--dropdown-pulse-anim-box-shadow-mid);
  }
  100% {
    box-shadow: 0 0 0 0 var(--dropdown-pulse-anim-box-shadow-end);
  }
}


/* show invalid input feedback */
.dropdown-item_not-allowed_input input{
  box-shadow: 0px 0px 2px 2px rgb(129 97 0 / 90%);
}
.dropdown-item_not-allowed_input input:hover{
  box-shadow: 0px 0px 2px 2px rgba(255, 193, 7, 0.62);
}


/* debugging */
.force-flex{
  display: flex;
}

